css/styles.css
@charset "utf-8";

/* CSS Document */
body,
html {
	height: 100%;
	width: 100%;
}

body,
td,
th,
p {
	color: #333;
	font: 12pt/1.5 'Source Sans Pro', sans-serif;
}

body {
	background-color: #fcfcfc;
	margin: 0;
	position: relative;
}

ul,
li {
	color: #333;
	font-size: 12pt;
}

a {
	color: #A36A00;
	text-decoration: none;
}

a:hover,
a:focus {
	color: #3397db;
	text-decoration: none;
}

a img {
	border: none 0 #fff;
}

h1,
h3,
h4,
h5,
h6 {
  margin: 0 0 20px;
}

h2 {
	font-size: 18px;
	font-weight: 200;
	letter-spacing: 1px;
	margin: 0 0 20px;
	text-align: center;
}

aside,
canvas,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
	display: block;
}

img {
	max-width: 100%;
}

.main-content {
  background-color: #fcfcfc;
	margin-top: 48px;
  min-height: 100%;
}

.footer {
  background-color: #303030;
  color: #BDBDBD;
  font-size: 12pt;
  letter-spacing: 1px;
  padding: 25px;
  text-align: center;
  text-transform: uppercase;
}

.footer strong {
	color: #DC831E;
}

.off-screen {
	left: -10000px;
	position: absolute;
}

@media screen and (min-width: 600px) {
	.main-content {
    margin-top: 54px;
	}
}

@media screen and (min-width: 800px) {
	.main-content {
    margin-top: 58px;
	}
}
/* ====================== Navigation ====================== */
header {
	left: 0;
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 2000;
}

header h1 {
	background-color: #252831;
	margin-bottom: 0;
	padding: 0;
	text-align: center;
	width: 100%;
}

header h1 a {
	color: #fff;
	font-size: 20px;
	font-weight: 100;
	letter-spacing: 5px;
	text-transform: uppercase;
}

nav {
  background-color: #eee;
}

.breadcrumb {
  font-size: 17px;
	list-style: none;
  margin: 0 auto;
	max-width: 1000px;
	padding: 10px 20px;
}

/* Display list items side by side */
.breadcrumb li {
  display: inline;
}

/* Add a slash symbol (/) before/behind each list item */
.breadcrumb li+li:before {
	color: black;
	content: "/\00a0";
  padding: 8px;
}

/* Add a color to all links inside the list */
.breadcrumb li a {
    color: #024C8D;
    text-decoration: none;
}

/* Add a color on mouse-over */
.breadcrumb li a:hover {
    color: #01447e;
    text-decoration: underline;
}
@media screen and (min-width: 600px) {
	header h1 {
		padding: 3px;
	}

	header h1 a {
		font-size: 25px;
	}
}

@media screen and (min-width: 800px) {
	header h1 {
		padding: 5px;
	}

	header h1 a {
		font-size: 28px;
	}

	.breadcrumb li {
	    font-size: 18px;
	}
}
/* ====================== Map ====================== */
.map {
	background-color: #ccc;
  height: 300px;
  width: 100%;
}

.map-container {
	margin-left: auto;
	margin-right: auto;
	max-width: 1000px;
	position: relative;
}

.map-container h2 {
	margin: 10px 0;
}

.map-skip-link {
	background-color: #A36A00;
	color: white;
	height: 1px;
	left: -10000px;
	overflow: hidden;
	position: absolute;
	text-align: left;
	top: -10000px;
	width: 1px;
	z-index: 10000;
}
.map-skip-link:active,
.map-skip-link:focus {
	-moz-box-shadow: 0 0 7px 5px rgba(255,255,255,0.89);
	-webkit-box-shadow: 0 0 7px 5px rgba(255,255,255,0.89);
	box-shadow: 0 0 7px 5px rgba(255,255,255,0.89);
	color: white;
	height: auto;
	left: 0;
	outline: 0;
	overflow: visible;
	padding: 10px;
	text-decoration: underline;
	top: 10px;
	width: auto;
}
/* ====================== Restaurant Listing Section ====================== */
.restaurants-list-section {
	margin-top: 20px;
}
/* ====================== Restaurant Filtering ====================== */
.filter-options {
	align-items: center;
	padding: 15px 0;
	text-align: center;
	width: 100%;
}
.filter-options fieldset {
	border: 1px solid lightgray;
	margin: 10px;
	width: auto;
}
.filter-options legend {
	font-size: 13pt;
}
.filter-options select {
	background-color: white;
	border: 1px solid lightgray;
	font-size: 12pt;
	height: 48px;
	letter-spacing: 0;
	margin: 16px auto;
	min-height: 48px;
	padding: 5px;
	width: 70%;
}

@media screen and (min-width: 500px) {
	.filter-options {
		margin: 0 auto;
		max-width: 500px;
	}
	.filter-options select {
		margin: 0 16px;
		width: calc(50% - 50px);
	}
}

/* ====================== Restaurant Listing ====================== */
.restaurants-list {
  background-color: #fcfcfc;
  list-style: outside none none;
  margin: 0;
  padding: 10px;
  text-align: center;
}
.restaurants-list article {
	background-color: #fff;
	border: 1px solid #ccc;
	border-bottom-right-radius: 15px;
	border-top-left-radius: 15px;
	margin: 10px auto;
	max-width: 500px;
	min-height: 380px;
	padding: 0;
	text-align: left;
}

.restaurants-list .restaurant-img {
	background-color: #ccc;
	border-bottom-right-radius: 0;
	display: block;
	margin: 0;
	max-width: 100%;
	min-width: 100%;
}

.restaurants-list article h2 {
	color: #AD5C00;
	font-size: 14pt;
	font-weight: 400;
	letter-spacing: 0;
	line-height: 1.3;
	margin: 20px 0 10px;
	text-transform: uppercase;
}

.restaurants-list article span {
	display: inline-block;
  margin: 0 10px 20px 10px;
}

.restaurants-list p {
	font-size: 11pt;
  margin: 0;
}

.restaurants-list article a {
  background-color: #A36A00;
  color: #fff;
  display: inline-block;
  font-size: 12pt;
  margin: 15px 0 0;
  padding: 12px 30px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}

.restaurants-list article a:focus,
.restaurants-list article a:active {
	-moz-box-shadow: 0 0 7px 5px rgba(163,106,0,0.89);
	-webkit-box-shadow: 0 0 7px 5px rgba(163,106,0,0.89);
	box-shadow: 0 0 7px 5px rgba(163,106,0,0.89);
  background-color: #2e323a;
	outline: 0;
  text-decoration: underline;
}

@media screen and (min-width: 750px) {
	.restaurants-list {
		display: flex;
		flex-wrap: wrap;
		margin-left: auto;
		margin-right: auto;
		max-width: 1000px;
	}

	.restaurants-list article {
		margin: 10px;
		width: calc(50% - 22px);
	}
}

/* ====================== Restaurant Details ====================== */
/***** Navigation *****/
.inside header {
  position: fixed;
  top: 0;
  width: 100%;
}

/***** Main *****/
.inside .main-content {
	margin-top: 93px;
}

.restaurant-name {
	color: #C7781B;
	display: inline-block;
	font-size: 20px;
	font-weight: 400;
	letter-spacing: 1px;
	line-height: 1.1;
	margin: 15px 5px;
	text-align: center;
	text-transform: uppercase;
	width: 100%;
}

@media screen and (min-width: 600px) {
	.inside .main-content {
    margin-top: 99px;
	}

	.restaurant-name {
		font-size: 23px;
	}
}

@media screen and (min-width: 800px) {
	.inside .main-content {
		display: flex;
		flex-wrap: wrap;
		margin-left: auto;
		margin-right: auto;
		margin-top: 106px;
		max-width: 1000px;
		padding: 0 20px;
	}

	.restaurant-name {
		font-size: 26px;
		margin-top: 30px;
		order: -3;
		width: 100%;
	}
}

/***** containers *****/
.restaurant-container,
.reviews-container,
.opening-hours-container {
	margin: 20px auto;
	width: 90%;
}

@media screen and (min-width: 800px) {
	.reviews-container {
		width: 100%;
	}
}

/***** Restaurant image, cuisine, address *****/
.restaurant-container h1 {
	font-size: 20px;
}

.restaurant-img-container {
	display: block;
	margin: 10px 0;
	position: relative;
}

.restaurant-img {
	border-top-left-radius: 15px;
	display: block;
	width: 100%;
}

.restaurant-img,
.restaurant-cuisine {
	border-bottom-right-radius: 15px;
}

.restaurant-cuisine {
	background-color: rgb(45, 43, 43);
	background-color: rgba(45, 43, 43, 0.9);
	bottom: 0;
	color: #ddd;
	font-size: 12pt;
	font-weight: 400;
	letter-spacing: 8px;
	margin: 0;
	padding: 1px 0;
	position: absolute;
	text-align: center;
	text-transform: uppercase;
	width: 100%;
}

.restaurant-address {
  font-size: 12pt;
  margin: 10px 0;
	padding: 0 10px;
}

@media screen and (min-width: 450px) {
	.restaurant-cuisine {
		padding: 3px 0;
	}
}

@media screen and (min-width: 600px) {
	.restaurant-address {
	  font-size: 14pt;
	}

	.restaurant-cuisine {
		padding: 5px 0;
	}
}
@media screen and (min-width: 800px) {
	.restaurant-cuisine {
		font-size: 12pt;
		padding: 8px 0;
	}
}

@media screen and (min-width: 800px) {
	.restaurant-container {
		margin-top: 0;
		order: -1;
		width: 100%;
	}

	.restaurant-address {
		font-size: 16pt;
		padding: 0;
	}
}

/***** map *****/
@media screen and (min-width: 800px) {
	.inside .map-container {
		width: calc(50% - 20px);
	}
}

/***** opening hours *****/
.reviews-container h2,
.opening-hours-container caption {
  font-size: 20px;
  font-weight: 400;
  letter-spacing: 1px;
	margin: 10px 0;
}

.opening-hours-container caption {
	color: #A66317;
}

.restaurant-hours {
	border-collapse: collapse;
	border-top: 1px solid lightgray;
	width: 100%;
}

.restaurant-hours td {
	border-bottom: 1px solid lightgray;
	color: #666;
	font-size: 16px;
	padding: 5px 0;
	text-align: center;
}

.restaurant-hours td:nth-child(1) {
  font-weight: bold;
}

@media screen and (min-width: 600px) {
	.reviews-container h2,
	.opening-hours-container caption {
	  font-size: 22px;
	}
}

@media screen and (min-width: 800px) {
	.opening-hours-container {
		margin-top: 0;
		width: calc(50% - 20px);
	}

	.reviews-container h2,
	.opening-hours-container caption {
	  font-size: 24px;
	}
}

/***** reviews list *****/
.reviews-container {
	background-color: #f2f2f2;
	margin-top: 10px;
	padding: 10px 0;
}

.reviews-container h2 {
	color: #995B15;
}

.reviews-list {
  margin: 0;
  padding: 0;
}

.review {
	background-color: #fff;
	border: 2px solid #fcfcfc;
	border-bottom-right-radius: 15px;
	border-top-left-radius: 15px;
	display: block;
	margin: 20px auto;
	overflow: hidden;
	position: relative;
	width: 90%;
}

.review p {
  margin: 0 0 10px;
}

.review-header {
	background-color: #333333;
	color: white !important;
	display: block;
	padding: 10px 15px;
}

.review-content {
	display: block;
	padding: 10px 20px;
}

.review-name {
	color: white !important;
	display: inline;
	font-weight: 400;
	letter-spacing: 1px;
}

.review-date {
	color: white !important;
	float: right;
	font-size: 11pt;
	font-weight: 200;
}

.review-rating {
	background-color: #AB6617;
	border-radius: 2px;
	color: white;
	display: inline-block;
	font-size: 11pt;
	letter-spacing: 1px;
	padding: 3px 10px;
	text-transform: uppercase;
}

@media screen and (min-width: 600px) {
	.review-content {
		padding: 20px 40px;
	}
}

@media screen and (min-width: 800px) {
	.review {
		width: 85%;
	}

	.review p {
	  font-size: 13pt;
		word-spacing: 3px;
	}

	.review-content {
		padding: 25px 60px;
	}
}

@media screen and (min-width: 900px) {
	.review {
		width: 80%;
	}
}

/***** leaflet *****/
.leaflet-container a {
    color: #005475 !important;
}

